# urbaflow

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENCE.md  Makefile  README.md  TODO.md  docker-compose.override.yml  docker-compose.yml  install.sh  pyproject.toml  requirements-dev.txt  requirements.txt
urbaflow/: logging_config.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
urbaflow/flows/basias/: import_basias.py
urbaflow/flows/cadastre/: flow_cadastre.py
urbaflow/flows/cadastre/tasks/: clean_after_imports.py  download_cadastre.py  fantoir_import_db.py  fantoir_import_file.py  format_cadastre.py  format_majic.py  get_communes_majic.py  import_majic.py  import_to_public.py  merge_majic_cadastre.py
urbaflow/flows/cartofriches/: import_cartofriches.py
urbaflow/flows/dvf/: download_DVF_from_imported_data.py
urbaflow/flows/fppm/: import_fppm.py
urbaflow/flows/geoportail/: import_bruit.py
urbaflow/flows/georisques/: import_cavite.py  import_rga.py  import_tri.py
urbaflow/flows/geosirene/: import_geosirene.py  import_geosirene_etablissement.py  import_sirene_unite_legale.py
urbaflow/flows/inpn/: import_znieff.py
urbaflow/flows/lovac/: import_lovac.py
urbaflow/queries/geosirene/: create_geom.sql
urbaflow/queries/majic/: commun_create_local.sql  commun_create_metier.sql  commun_create_parcellaire.sql  commun_create_proprietaire.sql  commun_create_unites_foncieres.sql
urbaflow/queries/majic/2019/: majic3_formatage_donnees.sql
urbaflow/shared_tasks/: etl.py  generic_tasks.py  read_query.py
urbaflow/temp/: communes.txt
urbaflow/temp/downloads/: cadastre-17072-batiments.json  cadastre-17072-parcelles.json
urbaflow/temp/sql/: commun_create_parcellaire.sql
urbaflow/urbaflow/: logging_config.py  main.py
urbaflow/urbaflow/flows/basias/: import_basias.py
urbaflow/urbaflow/flows/bpe/: __init__.py
urbaflow/urbaflow/shared_tasks/: config.py  db_engine.py  db_sql_utils.py  db_utils.py  etl.py  etl_file_utils.py  etl_gpd_utils.py  etl_ogr_utils.py  file_utils.py  generic_tasks.py  logging_config.py  processing.py  read_query.py  report_hook.py  sql_query_utils.py  utils.py
urbaflow/urbaflow/temp/: communes.txt
urbaflow/urbaflow/utils/: config.py  dbutils.py  download_file.py  file_utils.py  unzip_file.py
urbaflow/utils/: config.py  db_config.py  dbutils.py  file_utils.py  report_hook.py  script_utils.py  unzip_file.py
(+87 files in other folders)
