[tool.poetry]
name = "urbaflow"
version = "0.1.0"
description = "Intégration des données liées à l'urbanisme"
authors = ["Thomas Brosset <thomas.brosset@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
pandas = "^2.0.2"
GeoAlchemy2 = "^0.13.3"
simplejson = "^3.19.1"
pytz = "^2023.3"
geopandas = "^0.13.2"
SQLAlchemy = "^2.0.16"
psycopg2-binary = "^2.9.6"
chardet = "^5.2.0"
duckdb = "^1.0.0"
prefect = "^2.19.6"
typer = "^0.12.3"
owslib = "^0.31.0"
sqlparse = "^0.5.2"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
pylint = "^2.17.5"
ipykernel = "^6.29.4"
sqlfluff = "^3.3.0"
ruff = "^0.8.2"
pytest = "^8.3.4"
coverage = "^7.6.9"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.sqlfluff.indentation]
indent_unit = "space"
tab_space_size = 4
